# Home-Test

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini
driver_config/: chrome_config.json  edge_config.json  firefox_config.json  safari_config.json
envs/: .env  .env.test
html_reports/: 2025-05-26-18-18-02.html
requirements/: requirements-deploy.txt  requirements-dev.txt
src/: __init__.py  config.py  constants.py
src/finnhub/: finnhub_api_client.py
src/twitch/: twitch.py
src/twitch/elements/: search_element.py  streamer_list.py  tab_list.py  video_element.py  warning_messag.py
src/utils/: base_api_client.py  base_model.py  type_alias.py  url_router.py  utils.py
src/validate_models/: get_company_news.py  get_company_profile.py  get_quote.py  get_symbol_lookup.py
src/webdriver/: base_element.py  base_page.py  custom_wait_conditions.py  driver_factory.py  driver_generator.py  webdriver_config.py
tests/: conftest.py
tests/finhub/: test_finhub_api.py
tests/twitch/: test_twitch.py
unit_tests/utils/: test_utils.py
