[project]
name = "open-net-home-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
    "rich>=14.0.0",
    "selenium>=4.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# mypy type checking
# https://docs.pydantic.dev/latest/integrations/mypy/
[tool.mypy]
plugins = [
  "pydantic.mypy"
]
pretty = true
ignore_missing_imports = true
show_error_context = true
follow_imports = "skip"
enable_error_code = "explicit-override"
enable_incomplete_feature = "NewGenericSyntax"
strict_optional = true
show_column_numbers = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
disable_error_code = [
    "import-untyped",
    "attr-defined"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
